# variant-annotator

./: .gitignore  Dockerfile  README.md  main.nf  nextflow.config  nextflow_schema.json  pyproject.toml
templates/: report.html
