[project]
name = "variant-annotator"
version = "0.1.0"
description = ""
authors = [
    {name = "Jan Bińkowski",email = "jan.binkowski@pum.edu.pl"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "openai (>=1.66.3,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
